bubba-frontend (1.2.4.40) claire estelle; urgency=low

  * update wlan strings 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 21 Jan 2010 17:57:37 +0100

bubba-frontend (1.2.4.39) claire estelle; urgency=low

  * fix WEP password validation 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 20 Jan 2010 15:48:11 +0100

bubba-frontend (1.2.4.38) claire estelle; urgency=low

  * networkmanager complains "Missing parameter" if empty array for config for
    setdynamic is passed.

 -- Carl Fürstenberg <carl@excito.com>  Tue, 19 Jan 2010 15:14:57 +0100

bubba-frontend (1.2.4.37) claire estelle; urgency=low

  * new wlan interface focusin on band instead of standard 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 18 Jan 2010 18:56:18 +0100

bubba-frontend (1.2.4.36) claire estelle; urgency=low

  * set auto (closes: #1088) 
  * remove set custom profile lines from wanupdate 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 15 Jan 2010 13:45:17 +0100

bubba-frontend (1.2.4.35) claire estelle; urgency=low

  * Only show 5GHz channels for a/n and 2.4GHz channels for b,g, and n. 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 13 Jan 2010 18:20:44 +0100

bubba-frontend (1.2.4.34) claire estelle; urgency=low

  * remake wlan UI disabled mode to match generic 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 13 Jan 2010 16:05:39 +0100

bubba-frontend (1.2.4.33) claire estelle; urgency=low

  * Enable/Disable wlan last in config sequence to make sure we have a 
    consitent state

 -- Tor Krill <tor@excito.com>  Mon, 11 Jan 2010 11:28:54 +0100

bubba-frontend (1.2.4.32) claire estelle; urgency=low

  * due to lack of DFS in ath9k disable usage of any band marked as "passive
    scanning" 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 11 Jan 2010 09:36:42 +0100

bubba-frontend (1.2.4.31) claire estelle; urgency=low

  * Fix more regressions :( 

 -- Tor Krill <tor@excito.com>  Mon, 11 Jan 2010 00:46:02 +0100

bubba-frontend (1.2.4.30) claire estelle; urgency=low
