@@ -1,3 +1,10 @@
+bubba-frontend (1.2.4.41) claire estelle; urgency=low
+
+  * cleanup bands in networkmanager so it wont make havock if no card exists
+    in the first place.
+
+ -- Carl Fürstenberg <carl@excito.com>  Thu, 21 Jan 2010 18:48:53 +0100
+
 bubba-frontend (1.2.4.40) claire estelle; urgency=low
 
   * update wlan strings 
